<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context="com.sazib.ksl.ui._registration.signup.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnSubmit"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutPass">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtSubmit"
                    style="@style/buttonTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:text="@string/submit"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEmail"
                style="@style/TextInputLayout"
                android:layout_width="@dimen/dp_307"
                android:layout_height="@dimen/dp_65"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/dp_52"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/dp_52"
                app:boxCornerRadiusBottomEnd="@dimen/dp_16"
                app:boxCornerRadiusBottomStart="@dimen/dp_16"
                app:boxCornerRadiusTopEnd="@dimen/dp_16"
                app:boxCornerRadiusTopStart="@dimen/dp_16"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@+id/inputPassword"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivSigninProfile"
                    tools:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPass"
                style="@style/TextInputLayout"
                android:layout_width="@dimen/dp_307"
                android:layout_height="@dimen/dp_65"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/dp_52"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_52"
                app:boxCornerRadiusBottomEnd="@dimen/dp_16"
                app:boxCornerRadiusBottomStart="@dimen/dp_16"
                app:boxCornerRadiusTopEnd="@dimen/dp_16"
                app:boxCornerRadiusTopStart="@dimen/dp_16"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@+id/inputPassword"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivSigninProfile"
                    tools:hint="@string/password" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutName"
                style="@style/TextInputLayout"
                android:layout_width="@dimen/dp_307"
                android:layout_height="@dimen/dp_65"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/dp_52"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_marginEnd="@dimen/dp_52"
                app:boxCornerRadiusBottomEnd="@dimen/dp_16"
                app:boxCornerRadiusBottomStart="@dimen/dp_16"
                app:boxCornerRadiusTopEnd="@dimen/dp_16"
                app:boxCornerRadiusTopStart="@dimen/dp_16"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@+id/inputPassword"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivSigninProfile"
                    tools:hint="@string/username" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>